IAP-2 / IAP-101: Add Models for working with the workflow nodes Address the review of the workflow node models
Make `catching` a value the node type guarantees, rather than one that was
never written. The CND declared it with a default but did not autocreate it,
and a default only takes effect on an autocreated item, so no event node ever
carried the property: every start and boundary event read as throwing, and
EventBasedGateway.getAwaitedEvents(), which filters on it, silently returned
nothing. Each concrete event type now autocreates the value it fixes, and
protects it, since which one an event is follows from its node type and never
varies within one. The vocabulary therefore stops restating it: `jcrProperties`
is for what genuinely differs between entries sharing a node type -- `terminate`
on an end event -- and a second, weaker source of truth for a value that cannot
vary is only an opportunity to disagree.

Check the resource type when looking a child up by name. Content.getChild
adapted whatever it found, justified by the child being uniquely identified by
its name; that holds only where the parent declares one named child.
wf:WorkflowInstance declares three residual kinds, all named by the engine, so
instance.getVariable("t1") handed back a Variable wrapping a token, with no
value and no type, and a caller's != null test took it for a variable that
exists. Same for the /WorkflowTypes vocabulary, which accepts arbitrary
children. Adds the checked getChild overload alongside getChildren and
getParent, which already do this.

Also: bound Content.getParent to Content, like every other lookup helper, so a
model cannot ask for a raw Resource through it; copy the categories array
rather than handing out a live view of the model's own state; and read the
documentation heading from the autocreated title/description properties instead
of hardcoding it, so that the iap:Documented mixin the node type carries is not
dead and a deployment can reword the heading without t